<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fabianbell.janinakeller.lut_lappeenranta.Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/privacyTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <Switch
                android:id="@+id/accessLibrarySwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/access_library"
                android:textColorLink="@android:color/darker_gray"
                android:textSize="18sp"
                android:thumbTint="@color/colorPrimary"
                android:trackTint="@color/colorPrimary" />

            <Switch
                android:id="@+id/accessCameraSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorPrimary"
                android:checked="false"
                android:splitTrack="false"
                android:text="@string/access_camera"
                android:textColorLink="@android:color/darker_gray"
                android:textSize="18sp"
                android:thumbTint="@color/colorPrimary" />
        </LinearLayout>

        <TextView
            android:id="@+id/accountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/changeEmailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_email"
                android:textColorLink="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/settingsSaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/save" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
