<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fabianbell.janinakeller.lut_lappeenranta.FaultReport">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/faultReportHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fault_report"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/faultReportDevice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Device" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/faultReportQuestion1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fault_report_question_1"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/faultReportBrokenPartsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/faultReportQuestion2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fault_report_question_2"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/faultReportReasonEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/faultReportQuestion3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fault_report_question_3"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/faultReportGarantyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/faultReportNewCondtion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_condition"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/newConditionSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/faultReportSaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/save" />

            <Button
                android:id="@+id/faultReportSaveAndDeleteButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/save_and_delete"
                android:textColorHighlight="@android:color/white"
                android:textColorLink="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
