<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fabianbell.janinakeller.lut_lappeenranta.EditDevice">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <EditText
                    android:id="@+id/deviceModel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/model_name"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/deviceBrand"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/brand"
                    android:inputType="text"
                    android:selectAllOnFocus="false" />

                <EditText
                    android:id="@+id/deviceIDNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/id_number"
                    android:inputType="none|text|number" />

                <EditText
                    android:id="@+id/devicePrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/price"
                    android:inputType="numberDecimal" />

                <EditText
                    android:id="@+id/deviceShop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/shop"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/deviceDateOfPurchase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/date_of_purchase"
                    android:inputType="date" />

                <Spinner
                    android:id="@+id/deviceCondition"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:tooltipText="Condition" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="87dp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />

                <Button
                    android:id="@+id/addReceipt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Add Receipt" />

                <ProgressBar
                    android:id="@+id/uploadReceiptProgressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="468dp">

                <Button
                    android:id="@+id/saveDeviceButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:paddingBottom="10dp"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/deleteDeviceButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:backgroundTint="@android:color/holo_red_dark"
                    android:paddingBottom="10dp"
                    android:text="Delete Device"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
